/*
 * "Lakehouse management tool" - the services set for managing data changes based on a metadata-driven approach
 * Copyright (C) 2026  Dmitry Zaytsev https://github.com/zaytsevdmitry/lakehouse
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *     https://www.apache.org/licenses/LICENSE-2.0.txt
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package org.lakehouse.client.api.dto.configs.datasource;

import org.lakehouse.client.api.constant.DatabaseProtocol;
import org.lakehouse.client.api.constant.Types;
import org.lakehouse.client.api.dto.common.SQLTemplateDTO;

import java.util.Objects;

public class DataSourceDTO {
    private String keyName;
    ServiceDTO service;
    private String description;
    private DatabaseProtocol databaseProtocol;
    private Types.DataSourceType dataSourceType;

    public DataSourceDTO() {
    }

    public String getKeyName() {
        return keyName;
    }

    public void setKeyName(String keyName) {
        this.keyName = keyName;
    }

    public String getDescription() {
        return description;
    }

    public void setDescription(String description) {
        this.description = description;
    }

    public ServiceDTO getService() {
        return service;
    }

    public void setService(ServiceDTO service) {
        this.service = service;
    }

    public void setDatabaseProtocol(DatabaseProtocol databaseProtocol) {
        this.databaseProtocol = databaseProtocol;
    }

    public DatabaseProtocol getDatabaseProtocol() {
        return databaseProtocol;
    }

    public Types.DataSourceType getDataSourceType() {
        return dataSourceType;
    }

    public void setDataSourceType(Types.DataSourceType dataSourceType) {
        this.dataSourceType = dataSourceType;
    }

    @Override
    public String toString() {
        return "DataSourceDTO{" +
                "keyName='" + keyName + '\'' +
                ", service=" + service +
                ", description='" + description + '\'' +
                ", databaseProtocol=" + databaseProtocol +
                ", dataSourceType=" + dataSourceType +
                '}';
    }

    @Override
    public boolean equals(Object o) {
        if (o == null || getClass() != o.getClass()) return false;
        DataSourceDTO that = (DataSourceDTO) o;
        return Objects.equals(getKeyName(), that.getKeyName()) && Objects.equals(getService(), that.getService()) && Objects.equals(getDescription(), that.getDescription()) && getDatabaseProtocol() == that.getDatabaseProtocol() && getDataSourceType() == that.getDataSourceType();
    }

    @Override
    public int hashCode() {
        return Objects.hash(getKeyName(), getService(), getDescription(), getDatabaseProtocol(), getDataSourceType());
    }
}
